--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,6 +78,7 @@ jobs:
           ./scripts/feeds install -d n luci-app-npc
           ./scripts/feeds install -d n luci-app-nps
           make package/luci-app-npc/download -j8
+	  make package/luci-app-nps/download -j8
 
       - name: Pre-generate configuration
         run: |
@@ -238,6 +239,7 @@ jobs:
           ./scripts/feeds install -d n npc
           ./scripts/feeds install -d n nps
           make package/npc/download -j8
+	  make package/nps/download -j8
 
       - name: Pre-generate configuration
         run: |
