--- a/nps/Makefile
+++ b/nps/Makefile
@@ -3,7 +3,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=nps
-PKG_VERSION:=0.29.20
+PKG_VERSION:=null
 PKG_RELEASE:=1
 PKG_LICENSE:=Apache-2.0
 PKG_MAINTAINER:=Duan <duan@d-jy.net>
@@ -57,18 +57,18 @@ PKG_SOURCE_URL:=$(NPS_URL)/releases/download/v$(PKG_VERSION)/
 
 # === NPS_HASH_TABLE_START ===
 NPS_HASHES:= \
-  amd64=a84eef76b29b45aa54b2b915b09d259faf1c84fd44065b1ad5c6e37ba8d8ec75 \
-  386=3ea0dead9c732ee9c90a11a910a640f80b9d09516af190cad49ef2268cbe2867 \
-  arm64=0f8f5852f1ca783b5f6581abed02cd3d65f1c43bacfa544c3edd99066646bd26 \
-  arm_v7=672fb130f7b9adc1a9bf3cd880e1523553860a380a3ebe78b0bdb854d6675484 \
-  arm_v6=a773e6dce9758cd1c775eaa6ecd24e2237b6880351ed155c343e0aa33d9238b8 \
-  arm_v5=36026e03cdead6425f83cf471efbcd3e8d95b2a404900a6175fb2964b22390ba \
-  mips_softfloat=8784fa9a48d76d2a8ec16cdcd03af36e781de444d288c50f450591aedbdb32ca \
-  mipsle_softfloat=2e5cb20059ba7ecf9b69cd7e35f2b4d6adb74133eb09c6773910a6508eac8009 \
-  mips64=a2072dd98f7d9016b42e3fcc01513ac099aab850e72f6fb8ff4eceb43ad42b0b \
-  mips64le=e71682c6577aa1f5fd8a8bab6b5a23abb0a5a57a95e04f5950e45c13a4771128 \
-  loong64=5b1393cba6770a26038f5baf40ac7abe728396a78f2d02ce5af20eec4883079d \
-  riscv64=21b238ef496c20593994e875607f24e0aa39674b5a5f45ba0f3d3ab941a5a991
+  amd64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  386=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  arm64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  arm_v7=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  arm_v6=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  arm_v5=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  mips_softfloat=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  mipsle_softfloat=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  mips64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  mips64le=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  loong64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
+  riscv64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5
 # === NPS_HASH_TABLE_END ===
 
 PKG_HASH:=$(strip $(foreach pair,$(NPS_HASHES), $(if $(findstring $(NPS_ARCH),$(pair)),$(word 2, $(subst =, ,$(pair))))))
