--- a/nps/Makefile
+++ b/nps/Makefile
@@ -3,7 +3,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=nps
-PKG_VERSION:=null
+PKG_VERSION:=0.29.21
 PKG_RELEASE:=1
 PKG_LICENSE:=Apache-2.0
 PKG_MAINTAINER:=Duan <duan@d-jy.net>
@@ -57,18 +57,18 @@ PKG_SOURCE_URL:=$(NPS_URL)/releases/download/v$(PKG_VERSION)/
 
 # === NPS_HASH_TABLE_START ===
 NPS_HASHES:= \
-  amd64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  386=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  arm64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  arm_v7=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  arm_v6=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  arm_v5=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  mips_softfloat=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  mipsle_softfloat=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  mips64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  mips64le=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  loong64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5 \
-  riscv64=0019dfc4b32d63c1392aa264aed2253c1e0c2fb09216f8e2cc269bbfb8bb49b5
+  amd64=f390ea208d9c2cc05ace2b667ef5000707902727aa3eb053319f85ff0f51d6ff \
+  386=ed7ced286e1b379a7740d1580fa5072e37cb8255505dd26e958e2194e26037ca \
+  arm64=57ff3be7a22c776521d8438e26c90b04fa9697ea5010e18bd6961259a9c4c587 \
+  arm_v7=cee4fe2ec8f53a571000577a3c2e71f34bcf5becf12eeeced076ea6a6099c9e6 \
+  arm_v6=2c3eb8bd215363f00690989dc5787940b13622263910813827028f856b0d2f72 \
+  arm_v5=0f23a6592cb6a359c24183799c1e0c78049713378dbe92cfe6a5af145acfc002 \
+  mips_softfloat=3ee3bfed1a38abc6755961923479b08a046147202df619fdc9b3dbb7210e8f20 \
+  mipsle_softfloat=b8726ab5557746a1475b610c3f66b8307d97f71b37848e54648cf14e844010a6 \
+  mips64=8adbbe6bdb44d1f22692ce9a674ae6cbe158dca015c5b0bb3e9dc52886b54344 \
+  mips64le=ea35fae52dac2daa1d0d69d9e63ee48686d228628f6e61ceb2fc068468b786cc \
+  loong64=4aaee20391545bc266a22a1c00e744ab150d2ab333aa911b3a31d5d3f6a82178 \
+  riscv64=9a9851a53c4f1ccf12585381141a757497432c37317a04c62a733214f1f78361
 # === NPS_HASH_TABLE_END ===
 
 PKG_HASH:=$(strip $(foreach pair,$(NPS_HASHES), $(if $(findstring $(NPS_ARCH),$(pair)),$(word 2, $(subst =, ,$(pair))))))
