修复更新后自动重启 保存更新命令行输出 避免覆盖已有配置文件 修复部分设备更新跳转空白页面 默认配置按钮增加备份旧配置

--- a/luci-app-npc/Makefile
+++ b/luci-app-npc/Makefile
@@ -8,8 +8,12 @@ LUCI_TITLE:=LuCI support for NPC
 LUCI_DEPENDS:=+npc
 LUCI_PKGARCH:=all
 PKG_VERSION:=1.7
-PKG_RELEASE:=5
+PKG_RELEASE:=6
 
 include $(TOPDIR)/feeds/luci/luci.mk
+
+define Package/luci-app-npc/conffiles
+/etc/config/npc
+endef
 
 # call BuildPackage - OpenWrt buildroot signature
