--- a/luci-app-npc/Makefile
+++ b/luci-app-npc/Makefile
@@ -4,16 +4,18 @@
 
 include $(TOPDIR)/rules.mk
 
+PKG_NAME:=luci-app-npc
+PKG_VERSION:=1.7
+PKG_RELEASE:=7
+
 LUCI_TITLE:=LuCI support for NPC
 LUCI_DEPENDS:=+npc
 LUCI_PKGARCH:=all
-PKG_VERSION:=1.7
-PKG_RELEASE:=6
 
-include $(TOPDIR)/feeds/luci/luci.mk
-
-define Package/luci-app-npc/conffiles
+define Package/$(PKG_NAME)/conffiles
 /etc/config/npc
 endef
+
+include $(TOPDIR)/feeds/luci/luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
