--- a/luci-app-nps/Makefile
+++ b/luci-app-nps/Makefile
@@ -3,16 +3,18 @@
 
 include $(TOPDIR)/rules.mk
 
+PKG_NAME:=luci-app-nps
+PKG_VERSION:=1.7
+PKG_RELEASE:=7
+
 LUCI_TITLE:=LuCI support for NPS
 LUCI_DEPENDS:=+nps
 LUCI_PKGARCH:=all
-PKG_VERSION:=1.7
-PKG_RELEASE:=6
 
-include $(TOPDIR)/feeds/luci/luci.mk
-
-define Package/luci-app-nps/conffiles
+define Package/$(PKG_NAME)/conffiles
 /etc/config/nps
 endef
+
+include $(TOPDIR)/feeds/luci/luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
